[package]
name = "axum-postcard"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "📬 postcard axum extractor and response using serde"
repository = "https://github.com/joseburgosguntin/axum-postcard/tree/main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0", features=["alloc"] }
serde = "1.0"
heapless = "0.7.16"
axum = "0.6.20"
async-trait = "0.1.72"
mime = "0.3.17"
thiserror = "1.0"
bytes = "1.4"
uuid =  { version = "1.4.1", features = [ "serde" ] }
serde_json = "1.0"
tokio = { version = "1.29.1", features = ["full"] }

[dev-dependencies]
axum-test-helper = "0.*"
